# ofgui

./: CMakeLists.txt  Copyright.txt  Readme.txt  Todo  data.cpp  data.h  icons.qrc  license.txt  license_images.txt  main.ui  mainwindow.cpp  mainwindow.h  package.cmake  test.cmake
po/: CMakeLists.txt
po/en/: CMakeLists.txt  ofgui.po
po/nl/: CMakeLists.txt  ofgui.po
src/: about.cpp  data.cpp  data.h  fileinfo.cpp  fileinfo.h  filelogitem.cpp  filelogitem.h  globals.h  linklist.h  main.cpp  mainwindow.cpp  mainwindow.h  monitordialog.cpp  monitordialog.h  openfileiterator.cpp  openfileiterator.h  os.cpp  os.h  processiterator.cpp  processiterator.h  processlist.cpp  processlist.h  utils.cpp  utils.h  version.h
test/: CMakeLists.txt  test.cpp
test/base/: run_base.cpp  run_base.h  test01.cpp  test01.h  test_os.cpp  test_os.h
test/lib/: test.cpp  testclass.cpp  testclass.h  testconfig.cpp
ui/: about.ui  fileinfo.ui  main.ui  monitor.ui
